# jjalbot

./: .dockerignore  .flake8  .gitignore  .travis.yml  Dockerfile  README.md  check.sh  deploy.sh  docker-compose.yml  fabfile.py  manage.py  nginx.conf  pyproject.toml  requirements.txt  startup.sh
bigemoji/: admin.py  apps.py  decorators.py  forms.py  models.py  tests.py  urls.py  views.py
bigemoji/migrations/: 0001_initial.py  0002_bigemojialias_team.py  0003_deprecate_team_id.py  0004_copy_team_id.py  0005_delete_deprecated.py  0006_add_owner.py  0007_copy_slack_account.py  0008_deprecate_author.py  0009_bigemojistorage.py  0010_auto_20190329_1509.py  0011_bigemoji_alias.py  0012_auto_20190330_1556.py  0013_auto_20190330_1615.py  0014_bigemojistorage_max_entry.py  0015_bigemoji_storage.py  0016_copy_team_storage.py  0017_deprecate_team_id.py  0018_auto_20190403_1643.py  0019_auto_20190404_1640.py  0020_bigemoji_storage_size.py  0021_auto_20190410_0528.py  0022_auto_20190618_0237.py
bigemoji/slack/: README.md  __init__.py  admin.py  apps.py  context_processors.py  models.py  signals.py  tasks.py  urls.py  views.py
bigemoji/slackapp/: tasks.py  urls.py  utils.py  views.py
chatbot/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
chatbot/migrations/: 0001_initial.py
jjalbot/: celery.py  urls.py  wsgi.py
jjalbot/settings/: __init__.py  base.py  development.py  docker_compose.py  production.py  travis.py  (+1 more)
slackauth/: __init__.py  admin.py  apps.py  context_processors.py  decorators.py  models.py  provider.py  signals.py  tests.py  urls.py  views.py
(+35 files in other folders)
