[tool.poetry]
name = "jjalbot"
version = "0.1.0"
description = "JJALBot"
authors = ["Joonhyung Shin <tonyshin@kaist.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.0.3"
celery = "^4.4.0"
Pillow = "^7.0.0"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.4"
django-allauth = "^0.41.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"
coverage = "^5.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
